# SimplexQuantizer

./: README.md  pyproject.toml
SimplexQuantizer/: __init__.py  algorithm.py  tree.py
